=head1 Krang Changelog

This document contains a list of changes for each release of Krang.


=head2 2.X - IN DEVELOPMENT

=over 

=item *

Fixed a bug in media bulk upload - unless the media object was
originally created with its filename for title (i.e. uploaded via
bulk-upload or FTP) then trying to replace it with bulk upload
wouldn't work. [Sam]

=item *

In Krang::CGI::Status, import only ':html' functions from CGI, since
CGI's param() may mess up CAP's param().  [Bodo Schulze]


=item *

Added two new methods to Krang::ElementClass::TopLevel,
publish_frontend_app_template() and publish_frontend_app_stub().
These new methods permit a Krang site to publish interactive 
applications and templates for those applications easily and
consistently.  [Jesse Erlbaum]


=item *

Modified Site Server configuration to support CGI applications
(ending in ".cgi") and Apache::Registry apps (ending ".pl").
This will permit the site server to host interactive applications.
[Jesse Erlbaum]


=item *

Added new parameter "mode" to additional_content_block() method
in Publisher.  This new parameter permits the permission of the
file to be set, which is particularly useful for publishing
executable files.  [Jesse Erlbaum]


=item * 

Changed SiteServer to forbid any request which doesn't match a
publish or preview URL.  SiteServer trans handler now sets up 
C< $ENV{DOCUMENT_ROOT} > correctly which is needed in a CGI environment.
[Jesse Erlbaum]


=item * 

Krang::lib set to also ignore ".svn" directories.  [Jesse Erlbaum]

=item *

Stricter enforcement of asset permissions. [Michael Peters]

=item *

During Apache and FTP startup, krang now properly calls AddOn
init-handlers. [Michael Peters]

=back



=head2 2.008 - Dec 20th, 2006

=over

=item *

Fixed a long standing publishing bug.  Shuffling stories around could
cause the wrong files to be deleted when publishing.  [Sam]

=item *

Added several new configuration options which allow Krang instances to